fix: styles z-index

--- a/src/styles/fullscreen.scss
+++ b/src/styles/fullscreen.scss
@@ -1,6 +1,6 @@
 .fullscreen-content {
   position: fixed;
-  z-index: 9999;
+  z-index: 9995;
   overflow: hidden;
   height: 100vh;
   width: 100vw;
